--- a/android/app/src/main/res/xml/network_security_config.xml
+++ b/android/app/src/main/res/xml/network_security_config.xml
@@ -2,6 +2,7 @@
 <network-security-config>
     <domain-config cleartextTrafficPermitted="true">
         <domain includeSubdomains="true">210.212.223.83</domain>
+        <domain includeSubdomains="true">210.212.223.82</domain>
         <domain includeSubdomains="true">210.212.223.81</domain>
         <domain includeSubdomains="true">ccc.npdcl.com</domain>
     </domain-config>
