--- a/android/app/src/main/res/xml/network_security_config.xml
+++ b/android/app/src/main/res/xml/network_security_config.xml
@@ -5,5 +5,6 @@
         <domain includeSubdomains="true">210.212.223.82</domain>
         <domain includeSubdomains="true">210.212.223.81</domain>
         <domain includeSubdomains="true">ccc.npdcl.com</domain>
+        <domain includeSubdomains="true">210.212.223.88</domain>
     </domain-config>
 </network-security-config>
